[package]
name = "persistence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.2", features = [
    "sqlx-sqlite",
    "runtime-async-std-rustls",
    "macros",
    "with-time",
] }
