[package]
name = "presenter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[dependencies]
#application = { path = "../core/application" }
#tools = { path = "../core/tools" }
#contracts-dto = { path = "../core/contracts-dto" }

lazy_static = "1.4.0"

cxx = "1.0.102"
cxx-qt = { path = "../../../../cxx-qt/crates/cxx-qt" }
cxx-qt-lib = { path = "../../../../cxx-qt/crates/cxx-qt-lib" }

# cxx-qt-build generates C++ code from the `#[cxx_qt::bridge]` module
# and compiles it together with the Rust static library
[build-dependencies]
cxx-qt-build = { path = "../../../../cxx-qt/crates/cxx-qt-build" }

[features]
# This feature must be enabled for `cargo test` when linking Qt 6 statically.
link_qt_object_files = [ "cxx-qt-build/link_qt_object_files" ]